feat: implement rpc server and automatic signature for dod settlement contract (#17)
* feat: add auto sign contract feature


* fix: format code


* feat: update chain version


* feat: update rpc and cmd interface


* fix: billingType
