# rpc/grpc/proto/types.swagger.json
@@ -40,9 +40,247 @@
           "ChainAPI"
         ]
       }
+    },
+    "/order/create": {
+      "post": {
+        "operationId": "CreateOrder",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoCreateOrderRsp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protoCreateOrderParam"
+            }
+          }
+        ],
+        "tags": [
+          "OrderAPI"
+        ]
+      }
+    },
+    "/order/info": {
+      "post": {
+        "operationId": "OrderInfo",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoOrderInfoRsp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protoGetOrderInfoByInternalId"
+            }
+          }
+        ],
+        "tags": [
+          "OrderAPI"
+        ]
+      }
     }
   },
   "definitions": {
+    "protoConnectionDynamicParam": {
+      "type": "object",
+      "properties": {
+        "connectionName": {
+          "type": "string"
+        },
+        "paymentType": {
+          "type": "string"
+        },
+        "billingType": {
+          "type": "string"
+        },
+        "currency": {
+          "type": "string"
+        },
+        "serviceClass": {
+          "type": "string"
+        },
+        "bandwidth": {
+          "type": "string"
+        },
+        "billingUnit": {
+          "type": "string"
+        },
+        "price": {
+          "type": "string"
+        },
+        "startTime": {
+          "type": "string",
+          "format": "int64"
+        },
+        "endTime": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "protoConnectionParam": {
+      "type": "object",
+      "properties": {
+        "staticParam": {
+          "$ref": "#/definitions/protoConnectionStaticParam"
+        },
+        "dynamicParam": {
+          "$ref": "#/definitions/protoConnectionDynamicParam"
+        }
+      }
+    },
+    "protoConnectionStaticParam": {
+      "type": "object",
+      "properties": {
+        "productId": {
+          "type": "string"
+        },
+        "srcCompanyName": {
+          "type": "string"
+        },
+        "srcRegion": {
+          "type": "string"
+        },
+        "srcCity": {
+          "type": "string"
+        },
+        "srcDataCenter": {
+          "type": "string"
+        },
+        "srcPort": {
+          "type": "string"
+        },
+        "dstCompanyName": {
+          "type": "string"
+        },
+        "dstRegion": {
+          "type": "string"
+        },
+        "dstCity": {
+          "type": "string"
+        },
+        "dstDataCenter": {
+          "type": "string"
+        },
+        "dstPort": {
+          "type": "string"
+        }
+      }
+    },
+    "protoCreateOrderParam": {
+      "type": "object",
+      "properties": {
+        "buyer": {
+          "$ref": "#/definitions/protoUser"
+        },
+        "seller": {
+          "$ref": "#/definitions/protoUser"
+        },
+        "cps": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protoConnectionParam"
+          }
+        }
+      }
+    },
+    "protoCreateOrderRsp": {
+      "type": "object",
+      "properties": {
+        "orderIdOnChain": {
+          "type": "string"
+        }
+      }
+    },
+    "protoGetOrderInfoByInternalId": {
+      "type": "object",
+      "properties": {
+        "internalId": {
+          "type": "string"
+        }
+      }
+    },
+    "protoOrderInfoRsp": {
+      "type": "object",
+      "properties": {
+        "buyer": {
+          "$ref": "#/definitions/protoUser"
+        },
+        "seller": {
+          "$ref": "#/definitions/protoUser"
+        },
+        "orderId": {
+          "type": "string"
+        },
+        "orderType": {
+          "type": "string"
+        },
+        "orderState": {
+          "type": "string"
+        },
+        "contractState": {
+          "type": "string"
+        },
+        "connections": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protoConnectionParam"
+          }
+        },
+        "track": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protoOrderLifeTrack"
+          }
+        }
+      }
+    },
+    "protoOrderLifeTrack": {
+      "type": "object",
+      "properties": {
+        "contractState": {
+          "type": "string"
+        },
+        "orderState": {
+          "type": "string"
+        },
+        "reason": {
+          "type": "string"
+        },
+        "time": {
+          "type": "string",
+          "format": "int64"
+        },
+        "Hash": {
+          "type": "string"
+        }
+      }
+    },
+    "protoUser": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        }
+      }
+    },
     "protoVersionRequest": {
       "type": "object"
     },
